// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can be controlled 1`] = `
<div
  class="react-modal"
>
  <div
    class="Modal"
    data-test-id="cf-ui-modal"
    style="width: 520px;"
  >
    <div
      class="ModalHeader"
      data-test-id="cf-ui-modal-header"
    >
      <h1
        class="ModalHeader__title"
      >
        Hello
      </h1>
      <button
        aria-label="Close"
        class="Button IconButton IconButton--muted IconButton--deprecated Button--muted Button--trimmed"
        data-test-id="cf-ui-icon-button"
        type="button"
      >
        <span
          class="TabFocusTrap IconButton--trimmed Button__inner-wrapper"
          tabindex="-1"
        >
          <svg
            class="Icon Icon--small Icon--secondary IconButton__icon"
            data-test-id="cf-ui-icon"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="ModalContent"
      data-test-id="cf-ui-modal-content"
    >
      Content
    </div>
    <div
      class="ModalControls"
      data-test-id="cf-ui-modal-controls"
    >
      <button
        type="button"
      >
        Click on me
      </button>
    </div>
  </div>
</div>
`;

exports[`can override header and content properties 1`] = `
<div
  class="react-modal"
>
  <div
    class="Modal"
    data-test-id="cf-ui-modal"
    style="width: 520px;"
  >
    <div
      class="ModalHeader additional-header-class"
      data-test-id="cf-ui-modal-header"
    >
      <h1
        class="ModalHeader__title ModalHeader__title--is-not-wrapped"
      >
        Hello!
      </h1>
      <button
        aria-label="Close"
        class="Button IconButton IconButton--muted IconButton--deprecated Button--muted Button--trimmed"
        data-test-id="cf-ui-icon-button"
        type="button"
      >
        <span
          class="TabFocusTrap IconButton--trimmed Button__inner-wrapper"
          tabindex="-1"
        >
          <svg
            class="Icon Icon--small Icon--secondary IconButton__icon"
            data-test-id="cf-ui-icon"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="ModalContent additional-content-class"
      data-test-id="cf-ui-modal-content"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`renders the component 1`] = `
<div
  class="react-modal"
>
  <div
    class="Modal"
    data-test-id="cf-ui-modal"
    style="width: 520px;"
  >
    <div
      class="ModalHeader"
      data-test-id="cf-ui-modal-header"
    >
      <h1
        class="ModalHeader__title"
      >
        Title
      </h1>
      <button
        aria-label="Close"
        class="Button IconButton IconButton--muted IconButton--deprecated Button--muted Button--trimmed"
        data-test-id="cf-ui-icon-button"
        type="button"
      >
        <span
          class="TabFocusTrap IconButton--trimmed Button__inner-wrapper"
          tabindex="-1"
        >
          <svg
            class="Icon Icon--small Icon--secondary IconButton__icon"
            data-test-id="cf-ui-icon"
            height="1em"
            viewBox="0 0 24 24"
            width="1em"
          >
            <path
              d="M18.7071 6.70711C19.0976 6.31658 19.0976 5.68342 18.7071 5.29289C18.3166 4.90237 17.6834 4.90237 17.2929 5.29289L12 10.5858L6.70711 5.29289C6.31658 4.90237 5.68342 4.90237 5.29289 5.29289C4.90237 5.68342 4.90237 6.31658 5.29289 6.70711L10.5858 12L5.29289 17.2929C4.90237 17.6834 4.90237 18.3166 5.29289 18.7071C5.68342 19.0976 6.31658 19.0976 6.70711 18.7071L12 13.4142L17.2929 18.7071C17.6834 19.0976 18.3166 19.0976 18.7071 18.7071C19.0976 18.3166 19.0976 17.6834 18.7071 17.2929L13.4142 12L18.7071 6.70711Z"
            />
          </svg>
        </span>
      </button>
    </div>
    <div
      class="ModalContent"
      data-test-id="cf-ui-modal-content"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`renders the component without title 1`] = `
<div
  class="react-modal"
>
  <div
    class="Modal"
    data-test-id="cf-ui-modal"
    style="width: 520px;"
  >
    <div
      class="ModalContent"
      data-test-id="cf-ui-modal-content"
    >
      Content
    </div>
  </div>
</div>
`;
